[gd_scene load_steps=12 format=3 uid="uid://md4y0xd4jcq6"]

[ext_resource type="Script" uid="uid://cfpay0e0d8diw" path="res://stuff/wheel/wheel.gd" id="1_6uonh"]
[ext_resource type="Texture2D" uid="uid://cwefwfcistj05" path="res://Art/Stuff2/heart_javelin.png" id="3_l6a76"]
[ext_resource type="AudioStream" uid="uid://dtq0aduiy7nn4" path="res://Audio/gunshot.wav" id="4_fwm1w"]
[ext_resource type="AudioStream" uid="uid://1ch63fbrbyjn" path="res://Audio/goodresult-82807.mp3" id="5_diyo3"]
[ext_resource type="Script" uid="uid://bweh8jvtipns3" path="res://stuff/wheel/proc_wheel.gd" id="5_ltls0"]

[sub_resource type="LabelSettings" id="LabelSettings_diyo3"]
font_size = 90
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_ltls0"]
font_size = 75
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltls0"]
size = Vector2(325, 175)

[sub_resource type="LabelSettings" id="LabelSettings_7fpuo"]
font_size = 75
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_cjt4m"]
font_size = 100
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ltls0"]
radius = 323.65

[node name="wheel" type="Node2D"]
script = ExtResource("1_6uonh")

[node name="shadow_wheel" type="Node2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = 1
scale = Vector2(1.6, 1.6)
script = ExtResource("5_ltls0")

[node name="wheel" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 2
scale = Vector2(1.55, 1.55)
script = ExtResource("5_ltls0")

[node name="l1" type="Line2D" parent="wheel"]
scale = Vector2(3.1, 3.1)
points = PackedVector2Array(0, 0, 65, 0)
width = 1.0
default_color = Color(0, 0, 0, 1)

[node name="fate" type="Label" parent="wheel/l1"]
offset_left = 19.8
offset_right = 66.8
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "Fate 1"
metadata/_edit_use_anchors_ = true

[node name="l2" type="Line2D" parent="wheel"]
rotation = 1.0472
scale = Vector2(3.1, 3.1)
points = PackedVector2Array(0, 0, 65, 0)
width = 1.0
default_color = Color(0, 0, 0, 1)

[node name="fate" type="Label" parent="wheel/l2"]
offset_left = 19.8
offset_right = 66.8
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "Fate 2"
metadata/_edit_use_anchors_ = true

[node name="l3" type="Line2D" parent="wheel"]
rotation = 2.0944
scale = Vector2(3.1, 3.1)
points = PackedVector2Array(0, 0, 65, 0)
width = 1.0
default_color = Color(0, 0, 0, 1)

[node name="fate" type="Label" parent="wheel/l3"]
offset_left = 19.8
offset_right = 66.8
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "Fate 3"
metadata/_edit_use_anchors_ = true

[node name="l4" type="Line2D" parent="wheel"]
rotation = 3.14159
scale = Vector2(3.1, 3.1)
points = PackedVector2Array(0, 0, 65, 0)
width = 1.0
default_color = Color(0, 0, 0, 1)

[node name="fate" type="Label" parent="wheel/l4"]
offset_left = 19.8
offset_right = 66.8
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "Fate 4"
metadata/_edit_use_anchors_ = true

[node name="l5" type="Line2D" parent="wheel"]
rotation = -2.0943954
scale = Vector2(3.1, 3.1)
points = PackedVector2Array(0, 0, 65, 0)
width = 1.0
default_color = Color(0, 0, 0, 1)

[node name="fate" type="Label" parent="wheel/l5"]
offset_left = 19.8
offset_right = 66.8
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "Fate 5"
metadata/_edit_use_anchors_ = true

[node name="l6" type="Line2D" parent="wheel"]
rotation = -1.0471953
scale = Vector2(3.1, 3.1)
points = PackedVector2Array(0, 0, 65, 0)
width = 1.0
default_color = Color(0, 0, 0, 1)

[node name="fate" type="Label" parent="wheel/l6"]
offset_left = 19.8
offset_right = 66.8
offset_bottom = 23.0
scale = Vector2(0.5, 0.5)
text = "Fate 6"

[node name="pointer" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(400, 0)
scale = Vector2(3, 3)
texture = ExtResource("3_l6a76")
flip_h = true

[node name="startDecelerateTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="debug_txt" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -344.0
offset_top = -562.0
offset_right = 1756.0
offset_bottom = -461.0
text = "Click the wheel to spin!"
label_settings = SubResource("LabelSettings_diyo3")

[node name="big_text_bg" type="ColorRect" parent="."]
show_behind_parent = true
z_index = -1
offset_left = -445.0
offset_top = -574.0
offset_right = 2027.0
offset_bottom = -375.0
color = Color(0.28729492, 0.28729492, 0.2872949, 1)

[node name="big_text_bg_shadow" type="ColorRect" parent="big_text_bg"]
show_behind_parent = true
z_index = -1
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 2479.0
offset_bottom = 205.0
color = Color(0, 0, 0, 1)

[node name="accept_fate" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(551, -304)

[node name="Label" type="Label" parent="accept_fate"]
offset_left = -78.0
offset_top = 52.99999
offset_right = 847.0
offset_bottom = 509.0
text = "Accept fate?
Or roll again?"
label_settings = SubResource("LabelSettings_ltls0")
horizontal_alignment = 1

[node name="proceed_button" type="TouchScreenButton" parent="accept_fate"]
position = Vector2(381, 329)
shape = SubResource("RectangleShape2D_ltls0")
action = "accept_fate"

[node name="pbtxt" type="Label" parent="accept_fate/proceed_button"]
offset_left = -152.0
offset_top = -80.0
offset_right = 152.0
offset_bottom = 75.0
text = "Proceed to
question"
label_settings = SubResource("LabelSettings_7fpuo")
horizontal_alignment = 1

[node name="pa_bg" type="ColorRect" parent="accept_fate/proceed_button/pbtxt"]
show_behind_parent = true
layout_mode = 0
offset_left = -10.0
offset_top = -8.0
offset_right = 311.0
offset_bottom = 164.0
color = Color(0.28729492, 0.28729492, 0.2872949, 1)

[node name="pa_bg_shadow" type="ColorRect" parent="accept_fate/proceed_button/pbtxt/pa_bg"]
show_behind_parent = true
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 324.0
offset_bottom = 175.0
color = Color(0, 0, 0, 1)

[node name="spinClick" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_fwm1w")
pitch_scale = 4.0
bus = &"SFX"

[node name="fateSelected" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_diyo3")
pitch_scale = 1.2
bus = &"SFX"

[node name="point_arrow" type="Label" parent="."]
offset_left = 328.0
offset_top = -62.0
offset_right = 395.0
offset_bottom = 39.0
text = "<<"
label_settings = SubResource("LabelSettings_cjt4m")

[node name="pa_bg" type="ColorRect" parent="point_arrow"]
show_behind_parent = true
layout_mode = 0
offset_left = -7.0
offset_top = 33.0
offset_right = 73.0
offset_bottom = 93.0
color = Color(0.28729492, 0.28729492, 0.2872949, 1)

[node name="pa_bg_shadow" type="ColorRect" parent="point_arrow/pa_bg"]
show_behind_parent = true
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 82.0
offset_bottom = 62.0
color = Color(0, 0, 0, 1)

[node name="clickWheel" type="TouchScreenButton" parent="."]
z_index = 4
shape = SubResource("CircleShape2D_ltls0")
action = "spin"

[connection signal="timeout" from="startDecelerateTimer" to="." method="_on_start_decelerate_timer_timeout"]
